--- a/res/values-fi/strings.xml
+++ b/res/values-fi/strings.xml
@@ -567,6 +567,7 @@ Vastaanotetiin avaintenvaihtoviesti, joka kuuluu väärälle protokollaversiolle
   <string name="SmsMessageRecord_secure_session_reset">Sinä alustit suojatun istunnon.</string>
   <string name="SmsMessageRecord_secure_session_reset_s">%s alusti suojatun istunnon.</string>
   <string name="SmsMessageRecord_duplicate_message">Viestin kaksoiskappale.</string>
+  <string name="SmsMessageRecord_this_message_could_not_be_processed_because_it_was_sent_from_a_newer_version">Tätä viestiä ei voitu käsitellä, koska se lähetettiin uudemmasta Signal-versiosta. Voit pyytää yhteystietoasi lähettämään viestin uudelleen sen jälkeen kun olet päivittänyt.</string>
   <!--StickerManagementActivity-->
   <string name="StickerManagementActivity_stickers">Tarrat</string>
   <!--StickerManagementAdapter-->
@@ -575,8 +576,10 @@ Vastaanotetiin avaintenvaihtoviesti, joka kuuluu väärälle protokollaversiolle
   <string name="StickerManagementAdapter_signal_artist_series">Signal Artist -sarja</string>
   <string name="StickerManagementAdapter_no_stickers_installed">Tarroja ei ole asennettu</string>
   <string name="StickerManagementAdapter_stickers_from_incoming_messages_will_appear_here">Saapuvien viestien tarrat tulevat näkymään tässä</string>
+  <string name="StickerManagementAdapter_untitled">Nimetön</string>
   <string name="StickerManagementAdapter_unknown">Tuntematon</string>
   <!--StickerPackPreviewActivity-->
+  <string name="StickerPackPreviewActivity_untitled">Nimetön</string>
   <string name="StickerPackPreviewActivity_unknown">Tuntematon</string>
   <string name="StickerPackPreviewActivity_install">Asenna</string>
   <string name="StickerPackPreviewActivity_remove">Poista</string>
